--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         <h2 style="font-size: 50px;">Get in Touch</h2>
         <div class="contactus-detail">
             <p>
-                I am available on almost every social media. You can message me, I will reply within 24 hours. 
-                I can help you with ML, AI, React, Android, Cloud and Opensource Development.
+                I am available on almost every social media. You can message me, 
+                my inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
             </p>
         </div>      
         <a href="https://drive.google.com/file/d/14laTkaBbvyhtTjrCTOszwy75ze0fOT3r/view?usp=sharing" target="_blank">View Resume</a>
