nav bar and banner changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Tarun Singh Mahar</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -24,6 +24,11 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
+			<li class="menu__logo">
+                <a href="#">
+					< Tarun Singh Mahar />
+                </a>
+            </li>
             <li>
                 <a href="#about">About</a>
             </li>
@@ -46,19 +51,16 @@
     </header>
     <!-- End header -->
 
-    <div id="lead">
-        <div class="img-resume">
-            <img src="images/tarun.png" alt="Tarun Singh Mahar" class="face-img" id="face-img"><br>
-        </div>
-        <div id="lead-content">
-            <h1>Tarun Singh Mahar</h1>
-            <h2>Software Engineer</h2>
-        </div>
-        <!-- End #lead-content -->
-
-        <div id="lead-overlay"></div>
-
-        <div id="lead-down">
+	<div id="lead" class="profile_tsm">
+            <div id="lead-content">
+                <h2>Hi, my name is</h2>
+                <h1>Tarun Singh Mahar</h1>
+                <h2>Dotnet Developer</h2>
+            </div>
+            <div class="img-resume">
+                <img src="images/tarun.png" alt="Tarun Singh Mahar" class="face-img" id="face-img"><br>
+            </div>
+			<div id="lead-down">
             <span>
                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </span>
@@ -66,6 +68,7 @@
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
+    
 
     <div id="about">
         <div class="container">
@@ -246,7 +249,7 @@
                 my inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
             </p>
         </div>      
-        <a href="https://drive.google.com/file/d/14laTkaBbvyhtTjrCTOszwy75ze0fOT3r/view?usp=sharing" target="_blank">View Resume</a>
+        <a href="https://drive.google.com/file/d/1G0_Ft35BGWXkE5-D--rPa7jxBMtCLN40/view?usp=sharing" target="_blank">View Resume</a>
 
         <a class="email-link" href="mailto:tarunrpmahar@gmail.com" rel="noopener noreferrer" target="_blank" style="padding-left: 27px;">Say Hello</a>
 
